# ossie

./: .asf.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.ja.md  README.md  README.zh-CN.md  ROADMAP.md  mypy.ini  ruff.toml
compliance/: ADAPTER_INTERFACE.md  ARCHITECTURE.md  README.md  pyproject.toml
compliance/foundation/: DATA_TESTS.md  README.md  SPEC.md  conformance.yaml  decisions.yaml  proposals.yaml  pyproject.toml
compliance/foundation-v0.1/: .gitignore  README.md  SPEC.md  decisions.yaml  proposals.yaml
compliance/foundation-v0.1/datasets/f_ambig/: schema.sql
compliance/foundation-v0.1/datasets/f_bridge/: schema.sql
compliance/foundation-v0.1/datasets/f_bridge_none/: schema.sql
compliance/foundation-v0.1/datasets/f_nopath/: schema.sql
compliance/foundation-v0.1/datasets/f_prelude/: description.md  schema.sql
compliance/foundation-v0.1/results/: REPORT.md
compliance/foundation-v0.1/tests/: README.md
compliance/foundation/adapters/: osi_python_adapter.py
compliance/foundation/tests/: README.md
compliance/harness/: README.md  pyproject.toml
compliance/harness/src/harness/: __init__.py  __main__.py  db_manager.py  models.py  proposals_check.py  reporter.py  result_compare.py  runner.py
compliance/harness/src/harness/tests/: test_db_manager.py  test_proposals_check.py  test_registry_yaml.py  test_reporter_coverage.py  test_reporter_proposals.py  test_runner.py
converters/ataccama/: README.md  pyproject.toml
converters/ataccama/src/ataccama_osi/: __init__.py  ataccama_to_osi.py  cli.py  client.py  models.py
converters/ataccama/tests/: test_ataccama_to_osi.py
converters/ataccama/tests/fixtures/: ataccama_bundles.json
converters/databricks/: README.md  pyproject.toml
converters/databricks/src/: databricks_metric_view_to_osi.py  osi_to_databricks_metric_view.py
converters/databricks/src/osi_databricks/: __init__.py  _common.py  cli.py  dialect_utils.py  metric_view_to_osi.py  models.py  osi_to_metric_view.py
converters/databricks/src/ossie_databricks/: __init__.py  _common.py  cli.py  metric_view_to_osi.py  metric_view_to_ossie.py  osi_to_metric_view.py  ossie_to_metric_view.py
converters/databricks/tests/: _roundtrip_helpers.py  _util.py  conftest.py  test_cli.py  test_databricks_to_osi.py  test_dialect_utils.py  test_metric_view_to_osi.py  test_metric_view_to_ossie.py  test_models.py  test_osi_to_databricks.py  test_osi_to_metric_view.py  test_ossie_to_metric_view.py  test_roundtrip.py  test_roundtrip_properties.py
converters/databricks/tests/fixtures/: fixtureA_metric_view.yaml  fixtureA_osi.yaml  fixtureA_ossie.yaml  fixtureB_metric_view.yaml  fixtureB_osi.yaml  fixtureB_ossie.yaml  metric_view_tpcds.yaml  osi_tpcds.yaml  tpcds_metric_view.yaml  tpcds_osi.yaml  tpcds_ossie.yaml
converters/dbt/: README.md  plugin.yaml  pyproject.toml
converters/dbt/src/osi_dbt/: __init__.py  converter_issues.py  expression_utils.py  filter_utils.py  msi_to_osi.py  osi_to_msi.py  ossie_plugin.py
converters/dbt/src/ossie_dbt/: cli.py  msi_to_osi.py  osi_to_msi.py  ossie_plugin.py
converters/dbt/tests/: helpers.py  test_msi_to_osi.py  test_osi_to_msi.py  test_ossie_plugin.py  test_schema_conformance.py
converters/dbt/tests/__snapshots__/: test_msi_to_osi.ambr  test_osi_to_msi.ambr
converters/gsf/: README.md  pyproject.toml
converters/gsf/src/ossie_gsf/: __init__.py  converter.py
converters/gsf/tests/: test_converter.py
converters/gsf/tests/fixtures/: sales.gsf.yaml  sales.ossie.yaml
converters/legend/: pyproject.toml
converters/legend/doc/: CHECKLIST.md  DELIVERY_SUMMARY.md  DESIGN.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  PURE_DSL_COMPLETE.md  PURE_DSL_GUIDE.md  PURE_DSL_IMPLEMENTATION.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_PURE_DSL.md  START_HERE.md  STRUCTURE.md  VERIFICATION.md  WELCOME.md
converters/legend/src/: cli.py
converters/legend/src/legend_osi/: __init__.py  models.py  osi_to_legend.py
converters/legend/tests/: conftest.py  test_osi_to_legend.py
converters/legend/tests/example/: example.pure  example.yaml  flights.yaml
converters/legend/tests/fixtures/: tpcds_example_output.pure  tpcds_osi.yaml
converters/omni/: README.md  pyproject.toml
converters/omni/src/osi_omni/: __init__.py  _common.py  cli.py  omni_to_osi.py  osi_to_omni.py
converters/omni/tests/: _roundtrip_helpers.py  _util.py  conftest.py  test_omni_to_osi.py  test_osi_to_omni.py  test_real_world_layout.py  test_roundtrip.py  test_roundtrip_properties.py
converters/omni/tests/fixtures/: fixtureA_osi.yaml
converters/omni/tests/fixtures/fixtureA_omni/: relationships.yaml
converters/omni/tests/fixtures/fixtureB_omni/: model.yaml  relationships.yaml
converters/ontology/: .gitignore  README.md  pyproject.toml
converters/ontology/scripts/: palantir_to_osi.py
converters/ontology/src/osi/: __init__.py  model.py  spec.py
converters/ontology/tests/: conftest.py  test_examples_in_sync.py  test_flights_snapshot.py  test_osi_parser.py  test_palantir_parser.py  test_verbalization_parsing.py
converters/semantido/: README.md  pyproject.toml
converters/semantido/src/ossie_semantido/: __init__.py  cli.py  constants.py  converter_issues.py  loaders.py  osi_to_semantido.py  semantido_to_osi.py
converters/semantido/tests/: helpers.py  test_osi_to_semantido.py  test_semantido_to_osi.py
python/: README.md  pyproject.toml
python/ossie/: Makefile  pyproject.toml
python/ossie-sql/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
python/ossie-sql/src/ossie_sql/: __init__.py  dialect.py  functions.py  identifiers.py  validate.py  windows.py
python/ossie-sql/tests/: conftest.py  test_dialect_roundtrip.py  test_functions.py  test_identifiers.py  test_typed_literals.py  test_validate.py
python/ossie/src/ossie/: __init__.py  models.py
python/src/osi/: __init__.py  models.py
python/src/ossie/: __init__.py  models.py
python/test/: test_models.py
python/tests/: conftest.py  test_models.py  test_serialization.py  test_validation.py
(+491 files in other folders)
