# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

# ---------------------------------------------------------------------------
# Ossie compliance — uv workspace root.
#
# `compliance/` is a single uv workspace so the whole suite installs and runs
# as one unit: `uv sync` here builds ONE environment (./.venv) containing every
# member below, and `uv run` works from anywhere inside compliance/.
#
# This is the compliance-scoped realization of the project-wide single
# environment described in the Ossie dev guide. When the repo root later
# becomes the workspace root, these members roll up there and this file drops
# its [tool.uv.workspace] table (becoming a plain aggregator).
#
# This is a *virtual* root (no [project] table): it is not itself a
# distributable package, only the workspace definition. The installable
# packages are the members:
#   * harness/    -> osi_compliance_harness           (the shared runner)
#   * foundation/ -> osi_compliance_foundation_v0_1    (the Foundation suite)
# ---------------------------------------------------------------------------

[tool.uv.workspace]
members = ["harness", "foundation"]

# Dev tooling for the whole workspace. `uv sync` installs this group by
# default, so `uv run pytest` runs the harness + suite tests in the one
# workspace environment.
[dependency-groups]
dev = ["pytest>=7.4"]
