[project]
name = "ataccama-osi"
version = "0.2.0.dev0"
description = "Importer from Ataccama ONE catalog metadata to the OSI semantic model"
authors = [{name = "Ataccama", email = "support@ataccama.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
]

[project.scripts]
ataccama-to-osi = "ataccama_osi.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.11.5",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src/ataccama_osi/**/*"]
ignore-vcs = true

[tool.hatch.build.targets.wheel]
packages = ["src/ataccama_osi"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "W", "C4", "PIE", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
