[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osi-databricks"
version = "0.2.0.dev0"
description = "Bidirectional converter between OSI semantic models and Databricks Unity Catalog Metric Views"
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6.0",
]

[project.license]
text = "Apache-2.0"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
]

[project.scripts]
osi-databricks = "osi_databricks.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/osi_databricks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
