[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osi-dbt"
version = "0.2.0.dev0"
description = "dbt (MetricFlow Semantic Interface) <> OSI converter"
requires-python = ">=3.11"
dependencies = [
    "osi-python>=0.2.0.dev0",
    "metricflow>=0.200",
    "sqlglot>=20.0",
    "jinja2>=3.0",
    "PyYAML>=6.0",
]

[project.license]
text = "Apache-2.0"

[project.scripts]
osi-dbt = "osi_dbt.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/osi_dbt"]

[tool.uv]
dev-dependencies = [
    "jsonschema>=4.0",
    "pytest>=8.0",
    "syrupy>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
