[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osi-omni"
version = "0.2.0.dev0"
description = "Bidirectional converter between OSI semantic models and Omni semantic model files"
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6.0",
]

[project.license]
text = "Apache-2.0"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
]

[project.scripts]
osi-omni = "osi_omni.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/osi_omni"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
