# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apache-ossie-semantido"
version = "0.1.0.dev0"
description = "semantido (SQLAlchemy code-native semantic layer) <> Apache Ossie converter"
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "apache-ossie>=0.2.0.dev0",
    "semantido>=0.4.0",
    "SQLAlchemy>=2.0",
    "PyYAML>=6.0",
]

[project.license]
text = "Apache-2.0"

[project.scripts]
ossie-semantido = "ossie_semantido.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ossie_semantido"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]

[tool.uv.sources]
apache-ossie = { path = "../../python", editable = true }
