[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apache-ossie-sql"
version = "0.1.0"
description = "SQLGlot dialect for the Ossie expression language (core-spec/expression_language.md)"
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlglot>=25.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ossie_sql"]

[tool.ruff]
extend = "../../ruff.toml"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
